# qide

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE.h  README.md  build-appimage.sh  cross-mingw-w64.sh
.github/workflows/: appimage.yaml  appimage.yml  ci.yaml  cross-mingw-w64.yaml
base/: CMakeLists.txt  Camera.cpp  Renderer.cpp  shaders.hpp  shapes.cpp
base/games/Quake/: CMakeLists.txt  Game.cpp
build-debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  rules.ninja
build-debug/.cmake/api/v1/reply/: cache-v2-fff8a2877bbea64a3870.json  cmakeFiles-v1-d93db6bfef45e720130d.json  target-fmt-Debug-80605a6d3d190f3f14f9.json  target-gmqcclib-Debug-9efaafda1e07b3e55a69.json  target-qide_autogen-Debug-f84b9ad8e98d2c3bda7e.json
build-debug/.cmake/api/v1/reply.prev/: codemodel-v2-6ab3f9c26b60a0753212.json  index-2021-08-29T09-49-36-0714.json  target-qide-Debug-0b001ad056c00f30a1ae.json
build-debug/qide/: cmake_install.cmake
build-debug/qide/qide_autogen/: moc_predefs.h  mocs_compilation.cpp
build-debug/qide/qide_autogen/EWIEGA46WW/: moc_QCEdit.cpp  moc_QCExpr.cpp  moc_QCHighlighter.cpp  moc_QCLexer.cpp  moc_QCParser.cpp  moc_QCToken.cpp  moc_QCType.cpp
cmake/: Packaging.cmake
docs/: CNAME  index.md
include/qide/: Camera.hpp  Game.hpp  Renderer.hpp  RendererGL.hpp  shapes.hpp  types.hpp
qide/: CMakeLists.txt  QCByteCode.cpp  QCByteCode.hpp  QCCompleter.cpp  QCCompleter.hpp  QCEdit.cpp  QCEdit.hpp  QCExpr.hpp  QCHighlighter.cpp  QCHighlighter.hpp  QCLexer.cpp  QCLexer.hpp  QCMap.cpp  QCMap.hpp  QCParser.cpp  QCParser.hpp  QCProgs.cpp  QCProgs.hpp  QCToken.hpp  QCType.hpp  QCVM.cpp  QCVM.hpp  QIDE.exe.manifest  QideCompiler.cpp  QideCompiler.hpp  QideEditor.cpp  QideEditor.hpp  QideFileWizard.cpp  QideFileWizard.hpp  QideGame.cpp  QideGame.hpp  QideMapEditor.cpp  QideMapEditor.hpp  QidePakExplorer.cpp  QidePakExplorer.hpp  QideProjectWizard.cpp  QideProjectWizard.hpp  QideSearchBar.cpp  QideSearchBar.hpp  QideSettings.cpp  (+14 more)
qide/templates/id1/: README.md
qide/templates/progs_dump/: README.md  progs_dump-devkit-readme.txt
qide/templates/progs_dump/progs/: debris.mdl  g_shotgn.mdl  g_shotty.mdl  h_boss.mdl  ogre.mdl  pd_armor_sh.mdl  pd_base_key.mdl  pd_bpack.mdl  pd_rune_key.mdl  pd_wiz_key.mdl  s_flame.spr  s_null.spr  spark.mdl
qide/templates/progs_dump/progs/h_mdls/: pd_vial.mdl
qide/templates/progs_dump/src/: changelog.txt  progs.src
qide/templates/scratch/: README.md
qide/templates/scratch/src/: client.qc  main.qc  progs.src
res/: QIDE.desktop
rundir/src/: items.qc
toolchains/: mingw-w64.cmake
